@@ -1,3 +1,6 @@
+* Thu Sep 07 2023 Steven Pritchard <steve@sicura.us> - 4.5.0
+- Add AlmaLinux 8 support
+
 * Mon Jul 10 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.4.0
 - Add RockyLinux 8 support
 
